Changing the css typography

--- a/css/typography.css
+++ b/css/typography.css
@@ -1,5 +1,6 @@
 /* @import url("/css/font.css"); */
-@import url("https://fonts.googleapis.com/css?family=Oswald&display=block");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+
 
 h1,
 h2,
